Test out non-abstract integer vector math code.

--- a/allgraph/graphlab/slider-0.1.3/src/Makefile.am
+++ b/allgraph/graphlab/slider-0.1.3/src/Makefile.am
@@ -44,6 +44,7 @@ slider_SOURCES = \
 	support.c support.h \
 	interface.c interface.h \
 	callbacks.c callbacks.h \
+	ivecmath.c ivecmath.h \
 	gawrapper.h
 
 slider_LDADD = $(PACKAGE_LIBS) $(INTLLIBS)
