Better make dependencies.

--- a/allgraph/graphlab/xgraph/Makefile
+++ b/allgraph/graphlab/xgraph/Makefile
@@ -3,8 +3,11 @@ all: xgraph
 ivecmath.o: ivecmath.c ivecmath.h
 	cc -c $<
 
-xgraph: xgraph.c ivecmath.o
+xgraph.o: xgraph.c ivecmath.h
+	cc -c $<
+
+xgraph: xgraph.o ivecmath.o
 	cc $^ -lX11 -o $@
 
 clean:
-	rm -f ivecmath.o xgraph
+	rm -f ivecmath.o xgraph.o xgraph
