--- a/allgraph/graphlab/xgraph/Makefile
+++ b/allgraph/graphlab/xgraph/Makefile
@@ -1,4 +1,11 @@
-all: xgraph
+CROSS =
+CXX = $(CROSS)g++
+CFLAGS =
+LDFLAGS =
+X =
+LIBS = -lGL -lGLU -lX11
+
+all: xgraph glgraph$(X)
 
 ivecmath.o: ivecmath.c ivecmath.h
 	cc -c $<
@@ -9,5 +16,19 @@ xgraph.o: xgraph.c ivecmath.h
 xgraph: xgraph.o ivecmath.o
 	cc $^ -lX11 -o $@
 
-clean:
-	rm -f ivecmath.o xgraph.o xgraph
+xmain.o: xmain.cpp GfxOpenGL.h
+	$(CXX) $(CFLAGS) -c $< -o $@
+
+GfxOpenGL.o: GfxOpenGL.cpp GfxOpenGL.h
+	$(CXX) $(CFLAGS) -c $< -o $@
+
+glgraph$(X): xmain.o GfxOpenGL.o
+	$(CXX) $(LDFLAGS) -o $@ $^ $(LIBS)
+
+mostlyclean:
+	rm -f ivecmath.o xgraph.o
+	rm -f GfxOpenGL.o xmain.o
+
+clean: mostlyclean
+	rm -f xgraph
+	rm -f glgraph$(X)
