Commit work in progress.
* Minor code refactoring, fix some errors in existing code.

* Work on getting 3D vector math code implemented via simple copy-paste
  for the common primitives.  It's been a heck of a challenge to get
  together the higher-level functions for 3D math, but I'm almost there.

--- a/allgraph/graphlab/xgraph/Makefile
+++ b/allgraph/graphlab/xgraph/Makefile
@@ -8,7 +8,7 @@ LIBS = -lGL -lGLU -lX11
 all: xgraph glgraph$(X)
 
 ivecmath.o: ivecmath.c ivecmath.h
-	cc -c $<
+	cc -Wmissing-prototypes -Wmissing-declarations -c $<
 
 xgraph.o: xgraph.c ivecmath.h
 	cc -c $<
