First round at adding the improved 2D framebuffer drawing methods.
Also do some code cleanup and take note of improvement ideas.

--- a/allgraph/bootgraph/Makefile
+++ b/allgraph/bootgraph/Makefile
@@ -1,7 +1,10 @@
-all: xputpix
+all: xputpix bootgraph.o
 
 xputpix: xputpix.c
 	cc $< -lX11 -o $@
 
+bootgraph.o: bootgraph.c
+	cc -c $< -o $@
+
 clean:
-	rm -f xputpix
+	rm -f xputpix bootgraph.o
