First working bootgraph implementation, fixed some bugs.
Still more bugs to be fixed.

--- a/allgraph/bootgraph/Makefile
+++ b/allgraph/bootgraph/Makefile
@@ -1,7 +1,7 @@
 all: xputpix bootgraph.o
 
-xputpix: xputpix.c
-	cc $< -lX11 -o $@
+xputpix: xputpix.c bootgraph.o
+	cc xputpix.c bootgraph.o -lX11 -o $@
 
 bootgraph.o: bootgraph.c
 	cc -c $< -o $@
