--- a/allgraph/bootgraph/Makefile
+++ b/allgraph/bootgraph/Makefile
@@ -1,10 +1,13 @@
-all: xputpix bootgraph.o
+all: xputpix bootgraph.o dmath
 
-xputpix: xputpix.c bootgraph.o
+xputpix: xputpix.c bootgraph.h bootgraph.o
 	cc xputpix.c bootgraph.o -lX11 -o $@
 
-bootgraph.o: bootgraph.c
-	cc -c $< -o $@
+bootgraph.o: bootgraph.c bootgraph.h
+	cc -Wmissing-prototypes -Wmissing-declarations -c $< -o $@
+
+dmath: dmath.c
+	cc $< -o $@
 
 clean:
-	rm -f xputpix bootgraph.o
+	rm -f xputpix bootgraph.o dmath
